# diff-quantum-jax

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: model.py  model_inverse_1d.py  model_tdse_1d.py  model_tise_2d.py  physics.py  physics_inverse_1d.py  physics_tdse_1d.py  physics_tise_1d.py  physics_tise_2d.py  train.py  train_inverse_1d.py  train_tdse_1d.py  train_tise_1d.py  train_tise_2d.py
tests/: test_physics.py
