[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "diff-quantum-jax"
version = "0.1.0"
description = "Physics-Informed Neural Networks for Quantum Mechanics using JAX"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Harsh", email = "your.email@example.com" }
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "equinox>=0.11.0",
    "optax>=0.1.7",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]